# router-op-redis-plugin

./: .gitignore  Cargo.toml
src/plugins/: mod.rs  op_redis_plugin.rs
xtask/: Cargo.toml
