# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "router_plugin"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "xtask",
]

[[bin]]
name = "router"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
# Note if you update these dependencies then also update xtask/Cargo.toml
apollo-router = "1.9.0"
async-trait = "0.1.63"
deadpool-redis = "0.11.1"
futures = "0.3.25"
redis = "0.22.3"
schemars = "0.8.10"
serde = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.24.2", features = ["full"] }
tower = { version = "0.4.12", features = ["full"] }
tracing = "0.1.37"
sha2 = "0.10"

# this makes build scripts and proc macros faster to compile
[profile.dev.build-override]
strip = "debuginfo"
incremental = false
